src/main/java/com/calclogic/parse/CombParser.java
// Generated from Comb.g4 by ANTLR 4.8

	
package com.calclogic.parse; 

import com.calclogic.lambdacalculo.Indice;	
import com.calclogic.lambdacalculo.TypedTerm;
import com.calclogic.lambdacalculo.Sust;
import com.calclogic.lambdacalculo.Term;
import com.calclogic.lambdacalculo.TypedL;
import com.calclogic.lambdacalculo.Const;
import com.calclogic.lambdacalculo.ListaInd;
import com.calclogic.lambdacalculo.TypedApp;
import com.calclogic.lambdacalculo.TypedA;
import com.calclogic.lambdacalculo.TypedS;
import com.calclogic.lambdacalculo.ParInd;
import com.calclogic.lambdacalculo.Bracket;
import com.calclogic.lambdacalculo.TypedI;
import com.calclogic.lambdacalculo.Var;
import com.calclogic.lambdacalculo.Phi;
import com.calclogic.lambdacalculo.TypeVerificationException;
import com.calclogic.lambdacalculo.ConstInd;
import com.calclogic.lambdacalculo.App;
import java.util.LinkedList;	
	

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CombParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CONSTANT_C=1, PHI=2, LAMBDA=3, PERIOD=4, K=5, CB=6, O_PAR=7, C_PAR=8, 
		COMMA=9, C_BRACKET=10, O_BRACKET2=11, C_BRACKET2=12, ASSIGN=13, VARIABLE=14, 
		A=15, I=16, L=17, S=18, WHITESPACE=19;
	public static final int
		RULE_start_rule = 0, RULE_expr = 1, RULE_term = 2, RULE_term_base = 3, 
		RULE_term_tail = 4, RULE_variable_list = 5, RULE_variable_list_tail = 6, 
		RULE_term_list = 7, RULE_term_list_tail = 8, RULE_variable = 9, RULE_constant = 10, 
		RULE_constant_phi = 11, RULE_phi_tail = 12, RULE_comb_index = 13, RULE_cb_pair = 14, 
		RULE_prove_base = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"start_rule", "expr", "term", "term_base", "term_tail", "variable_list", 
			"variable_list_tail", "term_list", "term_list_tail", "variable", "constant", 
			"constant_phi", "phi_tail", "comb_index", "cb_pair", "prove_base"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'\\Phi_{'", "'\\lambda'", "'.'", "'K'", null, "'('", "')'", 
			"','", "'}'", "'['", "']'", "':='", null, "'A^{'", "'I^{'", "'L^{'", 
			"'S^{'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CONSTANT_C", "PHI", "LAMBDA", "PERIOD", "K", "CB", "O_PAR", "C_PAR", 
			"COMMA", "C_BRACKET", "O_BRACKET2", "C_BRACKET2", "ASSIGN", "VARIABLE", 
			"A", "I", "L", "S", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Comb.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CombParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Start_ruleContext extends ParserRuleContext {
		public Term value;
		public ExprContext expr;
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public Start_ruleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start_rule; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).enterStart_rule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).exitStart_rule(this);
		}
	}

	public final Start_ruleContext start_rule() throws RecognitionException {
		Start_ruleContext _localctx = new Start_ruleContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start_rule);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			((Start_ruleContext)_localctx).expr = expr();
			 ((Start_ruleContext)_localctx).value = ((Start_ruleContext)_localctx).expr.value; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public Term value;
		public TermContext term;
		public VariableContext v;
		public ExprContext e1;
		public Variable_listContext vl;
		public Term_listContext el;
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TerminalNode LAMBDA() { return getToken(CombParser.LAMBDA, 0); }
		public TerminalNode PERIOD() { return getToken(CombParser.PERIOD, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode O_BRACKET2() { return getToken(CombParser.O_BRACKET2, 0); }
		public TerminalNode ASSIGN() { return getToken(CombParser.ASSIGN, 0); }
		public TerminalNode C_BRACKET2() { return getToken(CombParser.C_BRACKET2, 0); }
		public Variable_listContext variable_list() {
			return getRuleContext(Variable_listContext.class,0);
		}
		public Term_listContext term_list() {
			return getRuleContext(Term_listContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expr);
		try {
			setState(51);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONSTANT_C:
			case PHI:
			case O_PAR:
			case VARIABLE:
			case A:
			case I:
			case L:
			case S:
				enterOuterAlt(_localctx, 1);
				{
				setState(35);
				((ExprContext)_localctx).term = term();
				 ((ExprContext)_localctx).value =  ((ExprContext)_localctx).term.value; 
				}
				break;
			case LAMBDA:
				enterOuterAlt(_localctx, 2);
				{
				setState(38);
				match(LAMBDA);
				setState(39);
				((ExprContext)_localctx).v = variable();
				setState(40);
				match(PERIOD);
				setState(41);
				((ExprContext)_localctx).e1 = expr();
				 ((ExprContext)_localctx).value =  new Bracket(((ExprContext)_localctx).v.value, ((ExprContext)_localctx).e1.value); 
				}
				break;
			case O_BRACKET2:
				enterOuterAlt(_localctx, 3);
				{
				setState(44);
				match(O_BRACKET2);
				setState(45);
				((ExprContext)_localctx).vl = variable_list();
				setState(46);
				match(ASSIGN);
				setState(47);
				((ExprContext)_localctx).el = term_list();
				setState(48);
				match(C_BRACKET2);
				 
				                                                  if (((ExprContext)_localctx).vl.value.size() != ((ExprContext)_localctx).el.value.size()) {
				                                                    try {
				                                                        throw new TypeVerificationException();
				                                                    }
				                                                    catch (TypeVerificationException e) {
				                                                        e.printStackTrace();
				                                                        System.exit(1);
				                                                    }
				                                                  }
				       						  else
				                                                    ((ExprContext)_localctx).value =  new Sust(((ExprContext)_localctx).vl.value, ((ExprContext)_localctx).el.value);
				                                                
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public Term value;
		public Term_baseContext term_base;
		public Term_tailContext term_tail;
		public Term_baseContext term_base() {
			return getRuleContext(Term_baseContext.class,0);
		}
		public Term_tailContext term_tail() {
			return getRuleContext(Term_tailContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_term);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			((TermContext)_localctx).term_base = term_base();
			setState(54);
			((TermContext)_localctx).term_tail = term_tail();
			 Term aux = ((TermContext)_localctx).term_base.value; 
			                                try {
				                          for (Term it: ((TermContext)_localctx).term_tail.value) {
			                                    if (aux instanceof TypedTerm && it instanceof TypedTerm) 
			                                          aux = new TypedApp(aux,it);
							    else if ( !(aux instanceof TypedTerm) && !(it instanceof TypedTerm))
								  aux = new App(aux,it);
			                                    else
			                                          throw new TypeVerificationException();
			                                  }
							}
			                                catch (TypeVerificationException e){
			                                    e.printStackTrace();
			                                    System.exit(1);
			                                }
							((TermContext)_localctx).value =  aux;  
			                            
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Term_baseContext extends ParserRuleContext {
		public Term value;
		public ConstantContext constant;
		public VariableContext variable;
		public TermContext term;
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode O_PAR() { return getToken(CombParser.O_PAR, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TerminalNode C_PAR() { return getToken(CombParser.C_PAR, 0); }
		public Term_baseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term_base; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).enterTerm_base(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).exitTerm_base(this);
		}
	}

	public final Term_baseContext term_base() throws RecognitionException {
		Term_baseContext _localctx = new Term_baseContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_term_base);
		try {
			setState(68);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONSTANT_C:
			case PHI:
			case A:
			case I:
			case L:
			case S:
				enterOuterAlt(_localctx, 1);
				{
				setState(57);
				((Term_baseContext)_localctx).constant = constant();
				 ((Term_baseContext)_localctx).value =  ((Term_baseContext)_localctx).constant.value; 
				}
				break;
			case VARIABLE:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				((Term_baseContext)_localctx).variable = variable();
				 ((Term_baseContext)_localctx).value =  ((Term_baseContext)_localctx).variable.value; 
				}
				break;
			case O_PAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(63);
				match(O_PAR);
				setState(64);
				((Term_baseContext)_localctx).term = term();
				setState(65);
				match(C_PAR);
				 ((Term_baseContext)_localctx).value =  ((Term_baseContext)_localctx).term.value; 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Term_tailContext extends ParserRuleContext {
		public LinkedList<Term> value;
		public Term_baseContext term_base;
		public Term_tailContext t;
		public Term_baseContext term_base() {
			return getRuleContext(Term_baseContext.class,0);
		}
		public Term_tailContext term_tail() {
			return getRuleContext(Term_tailContext.class,0);
		}
		public Term_tailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term_tail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).enterTerm_tail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).exitTerm_tail(this);
		}
	}

	public final Term_tailContext term_tail() throws RecognitionException {
		Term_tailContext _localctx = new Term_tailContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_term_tail);
		try {
			setState(75);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONSTANT_C:
			case PHI:
			case O_PAR:
			case VARIABLE:
			case A:
			case I:
			case L:
			case S:
				enterOuterAlt(_localctx, 1);
				{
				setState(70);
				((Term_tailContext)_localctx).term_base = term_base();
				setState(71);
				((Term_tailContext)_localctx).t = term_tail();
				 ((Term_tailContext)_localctx).t.value.add(0,((Term_tailContext)_localctx).term_base.value); ((Term_tailContext)_localctx).value =  ((Term_tailContext)_localctx).t.value; 
				}
				break;
			case EOF:
			case C_PAR:
			case COMMA:
			case C_BRACKET:
			case C_BRACKET2:
				enterOuterAlt(_localctx, 2);
				{
				 ((Term_tailContext)_localctx).value =  new LinkedList<Term>(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_listContext extends ParserRuleContext {
		public LinkedList<Var> value;
		public VariableContext variable;
		public Variable_list_tailContext vl;
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public Variable_list_tailContext variable_list_tail() {
			return getRuleContext(Variable_list_tailContext.class,0);
		}
		public Variable_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).enterVariable_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).exitVariable_list(this);
		}
	}

	public final Variable_listContext variable_list() throws RecognitionException {
		Variable_listContext _localctx = new Variable_listContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variable_list);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			((Variable_listContext)_localctx).variable = variable();
			setState(78);
			((Variable_listContext)_localctx).vl = variable_list_tail();
			 ((Variable_listContext)_localctx).vl.value.add(0,((Variable_listContext)_localctx).variable.value); ((Variable_listContext)_localctx).value =  ((Variable_listContext)_localctx).vl.value; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_list_tailContext extends ParserRuleContext {
		public LinkedList<Var> value;
		public Variable_listContext variable_list;
		public TerminalNode COMMA() { return getToken(CombParser.COMMA, 0); }
		public Variable_listContext variable_list() {
			return getRuleContext(Variable_listContext.class,0);
		}
		public Variable_list_tailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_list_tail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).enterVariable_list_tail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).exitVariable_list_tail(this);
		}
	}

	public final Variable_list_tailContext variable_list_tail() throws RecognitionException {
		Variable_list_tailContext _localctx = new Variable_list_tailContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_variable_list_tail);
		try {
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				match(COMMA);
				setState(82);
				((Variable_list_tailContext)_localctx).variable_list = variable_list();
				 ((Variable_list_tailContext)_localctx).value =  ((Variable_list_tailContext)_localctx).variable_list.value; 
				}
				break;
			case ASSIGN:
				enterOuterAlt(_localctx, 2);
				{
				 ((Variable_list_tailContext)_localctx).value =  new LinkedList<Var>(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Term_listContext extends ParserRuleContext {
		public LinkedList<Term> value;
		public TermContext term;
		public Term_list_tailContext el;
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public Term_list_tailContext term_list_tail() {
			return getRuleContext(Term_list_tailContext.class,0);
		}
		public Term_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).enterTerm_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).exitTerm_list(this);
		}
	}

	public final Term_listContext term_list() throws RecognitionException {
		Term_listContext _localctx = new Term_listContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_term_list);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			((Term_listContext)_localctx).term = term();
			setState(89);
			((Term_listContext)_localctx).el = term_list_tail();
			 ((Term_listContext)_localctx).el.value.add(0,((Term_listContext)_localctx).term.value); ((Term_listContext)_localctx).value =  ((Term_listContext)_localctx).el.value; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Term_list_tailContext extends ParserRuleContext {
		public LinkedList<Term> value;
		public Term_listContext term_list;
		public TerminalNode COMMA() { return getToken(CombParser.COMMA, 0); }
		public Term_listContext term_list() {
			return getRuleContext(Term_listContext.class,0);
		}
		public Term_list_tailContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term_list_tail; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).enterTerm_list_tail(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).exitTerm_list_tail(this);
		}
	}

	public final Term_list_tailContext term_list_tail() throws RecognitionException {
		Term_list_tailContext _localctx = new Term_list_tailContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_term_list_tail);
		try {
			setState(97);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case COMMA:
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				match(COMMA);
				setState(93);
				((Term_list_tailContext)_localctx).term_list = term_list();
				 ((Term_list_tailContext)_localctx).value =  ((Term_list_tailContext)_localctx).term_list.value; 
				}
				break;
			case C_BRACKET2:
				enterOuterAlt(_localctx, 2);
				{
				 ((Term_list_tailContext)_localctx).value =  new LinkedList<Term>(); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public Var value;
		public Token VARIABLE;
		public TerminalNode VARIABLE() { return getToken(CombParser.VARIABLE, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			((VariableContext)_localctx).VARIABLE = match(VARIABLE);
			String var = (((VariableContext)_localctx).VARIABLE!=null?((VariableContext)_localctx).VARIABLE.getText():null) ; // Take string format of the variable
			                    int index = Integer.parseInt(var.substring(3,var.length()-1));// Take only the the index of the variable
			                    ((VariableContext)_localctx).value =  new Var(index);// Return a new Variable obeject with that index
					   
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public Term value;
		public Token CONSTANT_C;
		public Constant_phiContext constant_phi;
		public Prove_baseContext prove_base;
		public TerminalNode CONSTANT_C() { return getToken(CombParser.CONSTANT_C, 0); }
		public Constant_phiContext constant_phi() {
			return getRuleContext(Constant_phiContext.class,0);
		}
		public Prove_baseContext prove_base() {
			return getRuleContext(Prove_baseContext.class,0);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).enterConstant(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CombListener ) ((CombListener)listener).exitConstant(this);
		}
	}
